recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not found: value orange
		 	setCouleur(orange)
                                   ^